tests/chainsaw/internal-domains/ingress-internal-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-internal-only
spec:
  ingressClassName: ngrok
  rules:
  - host: foo.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app
            port:
              number: 80
